// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`the <Toggle> component matches its snapshot when props.isToggled = false 1`] = `
.emotion-0 {
  display: inline-block;
  position: relative;
  height: 2rem;
  width: 4.5rem;
  overflow: hidden;
  border: none;
  border-radius: 2rem;
  box-shadow: var(--elevation-dp2);
  -webkit-transition: background 0.1s ease-in-out;
  transition: background 0.1s ease-in-out;
}

.emotion-1 {
  display: inline-block;
  position: absolute;
  top: 0.2rem;
  height: 1.6rem;
  width: 1.6rem;
  font-size: 1rem;
  font-weight: var(--font-weight-bold);
  border-radius: 50%;
  box-shadow: var(--elevation-dp2);
  pointer-events: none;
  text-transform: uppercase;
  -webkit-transition: 250ms;
  transition: 250ms;
  background-color: var(--color-silver);
  left: 0.225rem;
}

.emotion-1::before,
.emotion-1::after {
  position: absolute;
  display: block;
  color: var(--color-primary);
  line-height: 1.7rem;
}

.emotion-1::after {
  content: "NO";
  left: -2.1375rem;
}

<button
  aria-checked="false"
  class="emotion-0"
  role="switch"
>
  <span
    class="emotion-1"
  />
</button>
`;

exports[`the <Toggle> component matches its snapshot when props.isToggled = true 1`] = `
.emotion-0 {
  display: inline-block;
  position: relative;
  height: 2rem;
  width: 4.5rem;
  overflow: hidden;
  border: none;
  border-radius: 2rem;
  box-shadow: var(--elevation-dp2);
  -webkit-transition: background 0.1s ease-in-out;
  transition: background 0.1s ease-in-out;
}

.emotion-1 {
  display: inline-block;
  position: absolute;
  top: 0.2rem;
  height: 1.6rem;
  width: 1.6rem;
  font-size: 1rem;
  font-weight: var(--font-weight-bold);
  border-radius: 50%;
  box-shadow: var(--elevation-dp2);
  pointer-events: none;
  text-transform: uppercase;
  -webkit-transition: 250ms;
  transition: 250ms;
  background-color: var(--color-primary);
  left: 2.75rem;
}

.emotion-1::before,
.emotion-1::after {
  position: absolute;
  display: block;
  color: var(--color-primary);
  line-height: 1.7rem;
}

.emotion-1::before {
  content: "YES";
  left: -2.25rem;
}

<button
  aria-checked="true"
  class="emotion-0"
  role="switch"
>
  <span
    class="emotion-1"
  />
</button>
`;
